# StreamweaverV2

./: .gitignore  Cargo.toml  phase2_worker_analysis.md
backend/: .gitignore  Cargo.toml  diesel.toml
backend/src/: main.rs  schema.rs
backend/src/controller/: mod.rs  user_controller.rs
backend/src/database/: db.rs  mod.rs
backend/src/database/model_functions/: job_functions.rs  mod.rs
backend/src/database/redis_function/: mod.rs  redis_jobs.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/services/: apiservice.ts
shared/: Cargo.toml
shared/src/: lib.rs  schema.rs
shared/src/database/: db.rs  mod.rs
shared/src/database/model_functions/: job_functions.rs  mod.rs
shared/src/database/redis_function/: mod.rs  redis_jobs.rs
whisper/: Dockerfile
worker/: Cargo.toml
worker/src/: main.rs
worker/src/utils/: chapter_generation_utility.rs  ffmpeg_utility.rs  file_cleaner_utility.rs  mod.rs  upload_utility.rs  whisper_utility.rs
