[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.13.0"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.50.0", features= ["full"]}
diesel = {version  = "2.3.6" , features = ["postgres", "chrono", "serde_json", "uuid"]}
serde_json = "1.0.149"
dotenv = "0.15.0"
chrono = {version = "0.4.44", features = ["serde"]}
uuid = {version = "1.22.0", features = ["v4"]}

