[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenv = "0.15.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.127.0"